<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/wave"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_wave_haikei" />

    <View
        android:id="@+id/layered_waves"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_layered_waves_haikei" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:layout_marginTop="-50dp">

            <ImageView
                android:id="@+id/imageViewIcono"
                android:layout_width="81dp"
                android:layout_height="88dp"
                android:layout_row="0"
                android:layout_column="0"
                app:srcCompat="@drawable/ic_library_user"
                android:transitionName="logoImageTrans"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/accent"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:transitionName="textTrans"/>

                <TextView
                    android:id="@+id/nameApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/primary_dark"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:transitionName="textTrans"/>
            </LinearLayout>
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:id="@+id/usuarioTextField"
                android:hint="@string/hint_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/correo">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:id="@+id/claveTextField"
                android:hint="@string/hint_password"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/clave">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ini_sesion_name_btn"
                android:textColor="@color/white"
                android:layout_marginTop="12dp">
            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:rotation="180"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progressBarInterno"
        style="?android:attr/progressBarStyle"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textCargando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cargando..."
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

</RelativeLayout>