...
        android:layout_marginTop="12dp"
        android:layout_marginStart="28dp"
        android:text="@string/menu_principal"
        android:textColor="@color/primary_text"
        android:textSize="28sp"
        android:textStyle="bold"
        android:id="@+id/titleMenu"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
...
