<resources>
    <string name="from">de</string>
    <string name="app_name">AcuClass</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Clave</string>
    <string name="ini_sesion_name_btn">Iniciar sesión</string>
    <string name="welcome">Bienvenido a</string>
    <string name="evaluation">NOTAS</string>
    <string name="assists">ASISTENCIA</string>
    <string name="activities">EVALUACIONES</string>
    <string name="settings">CONFIGURACIÓN</string>
    <string name="logout">SALIR</string>
    <string name="menu_principal">Menú principal</string>
    <string name="listadoAlumnos">Listado de alumnos</string>
    <string name="listadoCursos">Listado de cursos</string>
    <string name="listadoAsignaturas">Listado de Asignaturas</string>
    <string name="Notas">Notas</string>
    <string name="btnBack">VOLVER</string>
    <string name="btnBackMenu">VOLVER A MENÚ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>